ui.frontend/src/main/webpack/etisalat/styles/regional_cards.scss
.promo-card .promo-card-row.container {
	margin-top: 35px;
	margin-bottom: 25px;
}

.promo-card .promo-card-row .promo-card-section h2 {
	margin-top: 0px;
	margin-bottom: 1rem;
	letter-spacing: 1.6px;
	line-height: 26px;
	font-size: 26px;
}

.promo-card .promo-card-row .promo-card-section h2 a {
	font-size: 26px;
	color: #fff;
}

.promo-card .promo-card-section .cmp-teaser__action-link:before {
	-webkit-transform: translateY(-50%) rotate(45deg);
	left: 139px;
	margin-top: 12px;
	border-top: 1px solid #fff;
	border-right: 1px solid #fff;
	padding: 4px;
	content: "";
	position: absolute;
}

.promo-card .promo-card-section {
	.cmp-teaser__action-container a {
		color: $white;
		letter-spacing: 2px;
		line-height: 20px;
		font-size: .875rem;
		font-weight: 500;
		text-transform: uppercase;
		@include font-family-lato;
	}
	.cmp-teaser__title a, .cmp-teaser__title a:hover {
		color: $white;
	}
}

.promo-card .promo-card-section {
	.cmp-teaser__action-container a:hover {
		text-decoration: underline;
	}
}

//premium cards css

.hero-card {
	.cmp-container{
        padding: 0px;
    }
	.image-right {
	margin-bottom: 1.5625rem;
	padding-left: 15px;
	padding-right: 15px;
	.cmp-teaser {
		display: flex;
		flex-direction: row-reverse;
		position: relative;
		height: 100%;
		box-shadow: 0 5px 15px 0 rgb(0 0 0 / 15%);	
		overflow: hidden;
	}
	.cmp-teaser__image {
		width: 50%;
		img {
			border-radius: 4px;
			max-width: 100%;
			height: auto;
		}
	}
	.cmp-teaser__content {
		width: 48%;
		padding: 1.5rem;
		flex-direction: column-reverse;
		display: flex;
		z-index: 3;
		bottom: 0;
		left: 0;
		position: absolute;
	}
	.cmp-teaser__image:after {
		position: absolute;
		content: "";
		background: linear-gradient(0deg, #000, transparent);
		opacity: 0.3;
		width: 100%;
		height: 100%;
		z-index: 2;
		top: 0;
	}
	.cmp-teaser__content h2 {
		font-size: 1.625rem;
		line-height: 2.0625rem;
		letter-spacing: 1.63px;
		padding-top: 1.25rem;
	}
	.cmp-teaser__content h2 a {
		color: #353738;
	}
	.cmp-teaser__action-container a {
		font-size: .875rem;
		line-height: 1.25rem;
		letter-spacing: 2px
	}
	.cmp-teaser__action-link:before {
		-webkit-transform: translateY(-50%) rotate(45deg);
		left: 139px;
		margin-top: 12px;
		border-top: 1px solid #719e19;
		border-right: 1px solid #719e19;
		padding: 4px;
		content: "";
		position: absolute;
	}
}

.promo-card-rev {
	margin-bottom: 3.125rem;
	.cmp-teaser__content {
		position: absolute;
		width: 100%;
		flex-direction: column-reverse;
		display: flex;
		z-index: 3;
		bottom: 0;
		left: 0;
		padding: 2.25rem;
	}
	.cmp-teaser__content h2 {
		font-size: 1.625rem;
		line-height: 2.0625rem;
		letter-spacing: 1.63px;
	}
	.cmp-teaser__content h2 a {
		color: #fff;
	}
	.cmp-teaser__image:after {
		position: absolute;
		content: "";
		background: linear-gradient(0deg, #000, transparent);
		opacity: 0.3;
		width: 100%;
		height: 100%;
		z-index: 2;
		top: 0;
	}
	.cmp-teaser {
		position: relative;
		overflow: hidden;
		border-radius: 4px;
	}
	.cmp-teaser__image img {
		border-radius: 4px;
	}
	.cmp-teaser__action-container a {
		font-size: .875rem;
		line-height: 1.25rem;
		letter-spacing: 2px;
		color: #fff;
	}
	.cmp-teaser__action-container a:hover {
		text-decoration: underline;
	}
	.cmp-teaser__action-link:before {
		-webkit-transform: translateY(-50%) rotate(45deg);
		left: 155px;
		margin-top: 12px;
		border-top: 1px solid #fff;
		border-right: 1px solid #fff;
		padding: 3px;
		content: "";
		position: absolute;
	}
}

@media (min-width:768px) and (max-width:990px) {
	.promo-card-rev,
	.image-right {
		margin-top: 10px;
		.cmp-teaser,
		.cmp-teaser__image img {
			border-radius: 4px;
		}
		.cmp-teaser__content h2 {
			font-size: 1.375rem;
			margin-top: 0px;
		}
	}
}

@media (max-width: 767px) {
	.promo-card-rev,
	.image-right {
		margin-top: 10px;
		.cmp-teaser__content h2 {
			font-size: 1.375rem;
			margin-top: 0px;
			padding-top: 0px;
			line-height: 1.5rem;
		}
	}
	.aem-Grid.aem-Grid--phone--12>.aem-GridColumn.aem-GridColumn--offset--phone--0 {
		width: 100%!important;
	}
}
}

.gutter-padding-left {
	padding-left: 12px;
}
.gutter-padding-right {
	padding-right: 12px;
}

@include respond-to-min($desktop){
	.hero-card {
		.promo-card-rev .cmp-teaser {
			max-height: 546px;
		}
		.cmp-teaser__image {
			max-height: 546px;
			border-radius: 4px;
    		overflow: hidden;
		}
		.cmp-teaser__title {
			margin: 0;
			font-size: $font40;
			padding-top: $font24;
			a, a:hover {
				color: $white;
			}
		}
		.aem-GridColumn--default--3 {
			.cmp-teaser__content {
				padding: $font24;
			}
			.cmp-teaser {
				max-height: 262px;
				overflow: hidden;
			}
			.cmp-teaser__title {
				font-size: $font26;
				padding-top: $font16;
			}
		}
	}
	.promo-card-rev {
		.cmp-teaser {
			position: relative;
		}
		.cmp-teaser__content {
			display: flex;
			flex-direction: column-reverse;
			padding: 1rem;
			width: 100%;
			bottom: 0;
			padding-top: 64px;
			padding-left: 19px;
			height: 100%;
			min-height: 47px;
			border-radius: 4px;
			position: absolute;
			z-index: 9;
			background: linear-gradient(0deg, #000, transparent);
		}
		.cmp-image__image {
			border-radius: 4px;
			min-height: 546px;
    		object-fit: cover;
		}
	}
	.promo-card {
		.promo-card-section .cmp-teaser__content {
			bottom: 0;
			padding-top: 135px;
			padding-left: 20px;
			padding-right: 20px;
			height: 100%;
			min-height: 47px;
			border-radius: 4px;
			position: absolute;
			z-index: 9;
			background: linear-gradient(0deg, #000, transparent);
			width: 100%;
			.cmp-teaser__title {
				font-size: $font26;
			}
		}
		.promo-card-row .promo-card-section {
			.cmp-teaser {
				height: 100%;
				min-height: 250px;
				position: relative;
				overflow: hidden;
				border-radius: 4px;
			}
			.cmp-image__image {
				border-radius: 4px;
				height: 250px;
			}
		}
		.promo-card-row.container {
			.promo-card-section {
				&:nth-of-type(1) {
					padding-right: 16px;
				}
				&:nth-of-type(2) {
					padding-left: 8px;
					padding-right: 8px;
				}
				&:nth-of-type(3) {
					padding-left: 16px;
				}
			}
		}
	}
	
	.promo-card-rev.aem-GridColumn--medium--none {
		margin-bottom: 1.5625rem;
		.cmp-image__image {
			min-height: auto;
		}
		.cmp-teaser {
			overflow: hidden;
		}
	}
}

@include respond-to-max($desktop){ 
	.hero-card {
		.promo-card-rev {
			margin-bottom: $font14;
			.cmp-teaser__content {
				padding: $font16;
				.cmp-teaser__title {
					font-size: $font22;
					margin: 0;
					a, a:hover {
						color: $white;
					}
				}
			}
			.cmp-teaser__image {
				border-radius: 4px;
				max-height: 546px;
				object-fit: cover;
			}
		}
	}
	.promo-card {
		.promo-card-section .cmp-teaser__content {
			width: 100%;
			bottom: 0;
			padding-top: 64px;
			padding-left: 19px;
			height: 100%;
			min-height: 47px;
			border-radius: 4px;
			position: absolute;
			z-index: 9;
			background: linear-gradient(0deg, #000, transparent);
			.cmp-teaser__title {
				font-size: $font20;
				margin: 0 0 $font16 0;
			}
		}
		.promo-card-row {
			.promo-card-section {
				.cmp-teaser {
					margin-bottom: $font24;
					max-height: 148px;
					position: relative;
					overflow: hidden
				}
				.cmp-image__image {
					border-radius: 4px;
				}
			}
		}
		.promo-card-row.container {
			margin-top: 0;
			margin-bottom: 15px;
			&:nth-of-type(1) {
				margin-top: 35px;
			}
		}
	}
	.teaser {
		.promo-card-section{
			padding: 0;
		}
	}
}

@include respond-to-max($phone){
	.gutter-padding-left {
		padding-left: 0;
	}
	.gutter-padding-right {
		padding-right: 0;
	}
}

